--- a/dojo/pom.xml
+++ b/dojo/pom.xml
@@ -22,6 +22,8 @@
 		<commons-lang3.version>3.12.0</commons-lang3.version>
 		<spring-cloud.version>2021.0.5</spring-cloud.version>
         <jib-maven-plugin.version>2.8.0</jib-maven-plugin.version>
+        <app.image.name>dojo</app.image.name>
+        <app.image.tag/>
 	</properties>
 	<repositories>
 		<repository>
@@ -105,46 +107,32 @@
                 <plugin>
                     <groupId>com.google.cloud.tools</groupId>
                     <artifactId>jib-maven-plugin</artifactId>
-                    <version>${jib-maven-plugin.version}</version>
+                    <version>2.5.2</version>
                     <configuration>
                         <from>
-                            <image>eclipse-temurin:11</image>
-                        </from>
-                        <to>
+                            <image>openjdk:alpine</image>
                             <auth>
-                                <username>buitahau@gmail.com</username>
+                                <username>buitahau</username>
                                 <password>12345678@Xx</password>
                             </auth>
-                            <image>hub.docker.com/buitahau/dojo:latest</image>
+                        </from>
+                        <to>
+                            <image>docker.io/buitahau/${app.image.name}:${app.image.tag}</image>
+                            <tags>
+                                <tag>latest</tag>
+                            </tags>
                         </to>
                         <container>
-                            <entrypoint>
-                                <shell>bash</shell>
-                                <option>-c</option>
-                                <arg>/entrypoint.sh</arg>
-                            </entrypoint>
+                            <mainClass>hau.kute.dojo.DojoApplication</mainClass>
                             <ports>
-                                <port>8083</port>
+                                <port>8080</port>
                             </ports>
-                            <environment>
-                                <SPRING_OUTPUT_ANSI_ENABLED>ALWAYS</SPRING_OUTPUT_ANSI_ENABLED>
-                                <JHIPSTER_SLEEP>0</JHIPSTER_SLEEP>
-                            </environment>
-                            <creationTime>USE_CURRENT_TIMESTAMP</creationTime>
-                            <user>1000</user>
+                            <format>OCI</format>
                         </container>
-                        <extraDirectories>
-                            <paths>src/main/docker/jib</paths>
-                            <permissions>
-                                <permission>
-                                    <file>/entrypoint.sh</file>
-                                    <mode>755</mode>
-                                </permission>
-                            </permissions>
-                        </extraDirectories>
                     </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
 	</build>
+
 </project>
